codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__pooled_access_notice__tests__pooled_invalid_default_unknown_source_notice.snap
---
source: tui/src/onboarding/pooled_access_notice.rs
expression: rendered
---
  Choose a default account pool

  The default account pool is not available for startup.

  Visible pools: team-main

  Run `mcodex accounts pool default set <POOL_ID>` to choose an
  available pool, or `mcodex accounts pool default clear` to remove the
  saved default.

  Press enter or l to log in
