codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__pooled_access_notice__tests__pooled_only_notice.snap
---
source: tui/src/onboarding/pooled_access_notice.rs
expression: render_to_string(&widget)
---
  Pooled access is available

  You can continue with pooled access or hand off to login.

  Press enter to continue, press l to log in, or press n to hide and con
